# awesome-compression

./: .gitignore  CHANGELOG.md  README.md
.github/workflows/: cpp-examples.yml  docs-pages.yml
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/.vitepress/theme/: style.css
docs/en/: index.md
docs/en/algorithms/: zstd.md
docs/en/examples/: brotli.md  bsc.md  cpp-overview.md  lz4.md  lzma.md  zlib.md  zstd.md
docs/en/guide/: compression-basics.md
docs/zh/: index.md
docs/zh/algorithms/: brotli.md  bsc.md  lz4.md  lzma.md  zlib.md  zstd.md
docs/zh/comparisons/: matrix.md  scenarios.md
docs/zh/examples/: brotli.md  bsc.md  cpp-overview.md  lz4.md  lzma.md  zlib.md  zstd.md
docs/zh/guide/: choosing-algorithms.md  coding-models.md  compression-basics.md
examples/cpp/: CMakeLists.txt  README.md
examples/cpp/cmake/: Dependencies.cmake
examples/cpp/data/: sample.txt
examples/cpp/src/: brotli_example.cpp  bsc_example.cpp  common.cpp  common.hpp  lz4_example.cpp  lzma_example.cpp  zlib_example.cpp  zstd_example.cpp
